fix: Minor fixes
Fixed the following:
1. Search with uppercase
2. The overlay covering full screen width and height
3. Responsiveness in horizontal card item

--- a/src/App.css
+++ b/src/App.css
@@ -60,5 +60,6 @@
   }
   .container__main {
     margin: 0.8rem;
+    width: 100%;
   }
 }
