--- a/src/components/OverlayBackground/overlay-background.css
+++ b/src/components/OverlayBackground/overlay-background.css
@@ -1,6 +1,6 @@
 .overlay-background {
-  height: 100vh;
-  width: 100vw;
+  min-height: 100%;
+  min-width: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   position: fixed;
   z-index: 2;
