--- a/src/pages/UserPages/user-pages.css
+++ b/src/pages/UserPages/user-pages.css
@@ -20,3 +20,9 @@
 .overlay {
   background-color: rgba(0, 0, 0, 0.5);
 }
+
+@media only screen and (max-width: 550px) {
+  .history__container-title {
+    font-size: 1.2rem;
+  }
+}
